2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* as-build.c (as_build): Improve debugging output.
	* map.c (map_install): Improve debugging output.
	(map_split): Likewise.
	(map_fault): Likewise.
	* map.h (REGION_FMT): Also print the end address.
	(REGION_PRINTF): Update accordingly.
	(MAP_FMT): Make output cleaner.

	(region_compare): Use a unintptr_t for the end, not an
	l4_uint64_t.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* as-lookup.c (as_lookup_rel_internal): New function.
	(as_lookup_rel): Implement this in terms of it.
	(as_dump_path_rel): New function.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* anonymous.c (fault): Assert that calling
	rm_object_discarded_clear does not fail.

2008-06-17  Neal H. Walfield  <neal@gnu.org>

	* core.c: Remove dead file.
	* memory.c: Likewise.
	* priv.h: Likewise.
	* store.c: Likewise.
	* vm.h: Likewise.
	* vm.c: Likewise.

2008-06-16  Neal H. Walfield  <neal@gnu.org>

	* map.h: New file.
	* map.c: New file.
	* Makefile.am (libhurd_mm_a_SOURCES): Add map.h and map.c.
	* headers.m4: Link map.h to sysroot/include/hurd/map.h.
	* pager.h: Rewrite.
	* pager.c: Likewise.
	* anonymous.h (ANONYMOUS_STAGING_AREA): New define.
	(anonymous_pager_fill_t): Don't pass the base of the region.  Pass
	the location of the storage corresponding to the pages on which
	the faults were raised and the offset into the region.  Update
	users.
	(struct anonymous_pager): Add fields map_area, map_area_count and
	lock.  Remove field alloced_region.
	(anonymous_pager_alloc): Replace size parameter with length
	parameter.  Take access parameter indicating the desired access.
	Update users.
	* anonymous.c (offset_compare): Compare the values, not the
	pointers.
	(fault): Update signature to be consistent with new API.  Lock
	ANON->LOCK.  Always look up the storage descriptor corresponding
	to the faulted page.  Copy the storage to the faulted address as
	required.  Update how we call ANON->FILL to be consistent with the
	new API.